--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build:ts": "tsc -p tsconfig.build.json",
-    "build": "vite build",
+    "build": "rimraf dist &&vite build",
     "build:css": "sass src/style/index.scss dist/style.css",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -57,8 +57,8 @@
     "vite-plugin-graphql-loader": "^4.0.4"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -98,8 +98,8 @@
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "playwright": "^1.51.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "remark-gfm": "^4.0.1",
     "rimraf": "^6.0.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.24",
