--- a/package.json
+++ b/package.json
@@ -44,6 +44,16 @@
     "dev": "storybook dev -p 6006",
     "build-storybook": "storybook build --docs"
   },
+  "unpkg": "./dist/umd/index.js",
+  "sideEffects": [
+    "*.css"
+  ],
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not < 0.2%",
+    "not ie >= 11"
+  ],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
