--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
-    "buildCommand": "npm run build-storybook",
-    "devCommand": "npm run dev",
-    "installCommand": "npm install",
+    "buildCommand": "pnpm run build-storybook",
+    "devCommand": "pnpm run dev",
+    "installCommand": "pnpm install",
     "framework": null,
     "outputDirectory": "./storybook-static"
   }
